Bug 990851 - Fix TexSubImage with cubemap face failure. r=jgilbert, a=lsblakk